--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "dev": "webpack-dev-server --open"
+    "dev": "webpack-dev-server --inline",
+    "server": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -21,14 +22,18 @@
   "devDependencies": {
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
+    "express": "^4.16.4",
     "file-loader": "^3.0.1",
+    "hogan.js": "^3.0.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
     "style-loader": "^0.23.1",
+    "url-loader": "^1.1.2",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1"
+    "webpack-dev-middleware": "^3.6.2",
+    "webpack-dev-server-output": "0.0.6"
   },
   "dependencies": {
     "lodash": "^4.17.11"
