--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "dev": "webpack-dev-server --inline",
+    "dev": "webpack-dev-server",
     "server": "node server.js"
   },
   "repository": {
@@ -32,6 +32,7 @@
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-middleware": "^3.6.2",
+    "webpack-dev-server": "^3.3.1",
     "webpack-dev-server-output": "0.0.6"
   },
   "dependencies": {
